Resolve layout issues in IE8

--- a/app/assets/stylesheets/ie8.css.scss
+++ b/app/assets/stylesheets/ie8.css.scss
@@ -14,3 +14,7 @@ label.exemption {
   padding-right: 100px;
   width: 66.6666666667%;
 }
+
+#content {
+  margin: 0 auto;
+}
